--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Bellybutton Biodiversity</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="../assets/style.css">
 </head>
 
 <body>
@@ -14,35 +15,48 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12 jumbotron text-center">
-        <h1>Belly Button Biodiversity Dashboard</h1>
-        <p>Use the interactive charts below to explore the dataset</p>
+        <h1>Belly Button Biodiversity</h1>
+        <p>Please use the interactive charts below to explore the dataset</p>
       </div>
     </div>
+
     <div class="row">
-      <div class="col-md-2">
+      <div class="col-md-4">
         <div class="well">
-          <h5>Test Subject ID No.:</h5>
+          <!-- <h5>Test Subject ID:</h5> -->
+          <label for="selDataset" class="text-muted">Test Subject ID:</label>
           <select id="selDataset" onchange="optionChanged(this.value)"></select>
         </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-4">
         <div class="panel panel-primary">
           <div class="panel-heading">
             <h3 class="panel-title">Demographic Info</h3>
           </div>
-          <div id="sample-metadata" class="panel-body"></div>
+          <div id="sample-metadata" class="panel-body">
+            <table class="table table-striped">
+
+            </table>
+          </div>
         </div>
       </div>
-      <div class="col-md-5">
+    </div>
+    <!-- <div class="col-md-5">
         <div id="bar"></div>
       </div>
       <div class="col-md-5">
         <div id="gauge"></div>
-      </div>
-    </div>
-    <div class="row">
+      </div> -->
+    <!-- </div> -->
+    <!-- <div class="row">
       <div class="col-md-12">
         <div id="bubble"></div>
       </div>
-    </div>
+    </div> -->
+    <!-- </div> -->
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
