--- a/index.html
+++ b/index.html
@@ -11,55 +11,71 @@
 </head>
 
 <body>
-
-  <div class="container">
+  <div class="parent-container col-md-12" id="jumbotron-container">
     <div class="row">
-      <div class="col-md-12 jumbotron text-center">
+      <div class="jumbotron col-md-12  text-center">
         <h1>Belly Button Biodiversity</h1>
-        <p>Please use the interactive charts below to explore the dataset</p>
+        <p class="text-muted">Please use the interactive charts below to explore the dataset</p>
       </div>
     </div>
 
-    <div class="row">
-      <div class="col-md-4">
-        <div class="well">
-          <!-- <h5>Test Subject ID:</h5> -->
-          <label for="selDataset" class="text-muted">Test Subject ID:</label>
-          <select id="selDataset" onchange="optionChanged(this.value)"></select>
+    <div class="container-left col-md-3">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="well text-center">
+            <!-- <h5>Test Subject ID:</h5> -->
+            <label for="selDataset" class="text-muted">Test Subject ID:</label>
+            <select id="selDataset" onchange="optionChanged(this.value)"></select>
+          </div> <!-- Dropdown well ends here-->
         </div>
       </div>
-    </div>
 
-    <div class="row">
-      <div class="col-md-4">
-        <div class="panel panel-primary">
-          <div class="panel-heading">
-            <h3 class="panel-title">Demographic Info</h3>
-          </div>
-          <div id="sample-metadata" class="panel-body">
-            <table class="table table-striped">
-
-            </table>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="panel panel-primary">
+            <div class="panel-heading">
+              <h3 class="panel-title  text-center">Demographic Info</h3>
+            </div>
+            <div id="sample-metadata" class="panel-body">
+              <table class="table table-striped">
+              </table>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-    <!-- <div class="col-md-5">
-        <div id="bar"></div>
-      </div>
-      <div class="col-md-5">
-        <div id="gauge"></div>
-      </div> -->
-    <!-- </div> -->
-    <!-- <div class="row">
-      <div class="col-md-12">
-        <div id="bubble"></div>
-      </div>
-    </div> -->
-    <!-- </div> -->
-  </div>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
+    </div> <!-- Demographic container ends here-->
+    <div class="container-right col-md-8">
+      <div class="row">
+        <div class="col-md-6">
+          <div id="bar">
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div id="gauge">
+          </div>
+        </div>
+      </div>
+    </div> <!-- bar/gauge container ends here-->
+
+    <div class="row">
+      <div class="container-right col-md-12">
+        <div class="row">
+          <div class="col-md-12">
+            <div id="bubble"></div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+
+  </div> <!--  parent-container ends here -->
+
+
+
+  <script src=" https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js">
+  </script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <script src="./static/js/app.js"></script>
   <script src="./static/js/bonus.js"></script>
